--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,27 @@
-version: "3.9"
 services:
   emprestimodelivro:
     image: emprestimodelivro
     build: .
     ports:
       - "8080:8080"
+    depends_on:
+      - postgres
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/biblioteca
+      - SPRING_DATASOURCE_USERNAME=admin
+      - SPRING_DATASOURCE_PASSWORD=admin
+
+  postgres:
+    image: postgres:15
+    container_name: biblioteca-postgres
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: biblioteca
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
